# Advanced-Programming-in-the-UNIX-Environment

./: CMakeLists.txt  apue.h  error.c  log.c  main.c
Section 1/: 2.Unbuffered_IO.c  3.Standard_IO.c  4.Processes_and_Process_ID.c  5.Process Control.c  8.Signals.c
Section 2/: 1.Pathnames.c  2.Maximum_Number_of_Open_Files.c
Section 3/: 1.lseek_Function_1.c  2.lseek_Function_2.c  4.fcntl_Function_2.c  fcntl_Function.c
Section 4/: 1.File_Types.c  10.Device_Special_Files.c  2.access_and_faccessat_Functions.c  3.umask_Function.c  4.chmod_fchmod_and_fchmodat_Functions.c  5.link_linkat_unlink_unlinkat_and_remove_Functions.c  6.futimens_utimensat_and_utimes_Functions.c  7.Reading_Directories.c  8.chdir_fchdir_and_getcwd_Functions_1.c  9.chdir_fchdir_and_getcwd_Functions_2.c
Section 5/: 1.Implementation_Details.c  2.Temporar_Files_1.c  3.Temporar_Files_2.c  4.Memory_Streams.c
Section 6/: 1.Password_File.c  2.Tim_ and_Date_Routines.c
Section 7/: 2.Process_Termination_2.c  3.Command-Line_Arguments.cpp  4.Automatic_Register_and_Volatile_Variables.c  5.getrlimit_and_setrlimit_Functions.c
Section 8/: 1.fork_Function.c  2.vfork_Function.c  3.wait_and_waitpid_Functions_1.c  4.wait_and_waitpid_Functions_2.c  5.Race_Conditions.c  exec_Functions_2.c
